--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .idea/
 *.iml
+config/
+!config/config.yaml
+!config/app/deployment/
+!config/app/dev/
+configure-aws-cli.py
+upload-private-config.sh
+upload-public-templates.sh
