permission to list topics

--- a/templates/deployment-target-account.yaml
+++ b/templates/deployment-target-account.yaml
@@ -167,6 +167,11 @@ Resources:
             Effect: Allow
             Resource:
               - !Sub arn:aws:iam::${AWS::AccountId}:policy/${ProjectName}-*
+          - Action:
+              - sns:ListTopics
+            Effect: Allow
+            Resource:
+              - !Sub arn:aws:sns:*:${AWS::AccountId}:*
         Version: '2012-10-17'
     Type: AWS::IAM::ManagedPolicy
 
