all publish to dlq in all regions

--- a/templates/deployment-target-account.yaml
+++ b/templates/deployment-target-account.yaml
@@ -47,7 +47,7 @@ Resources:
           - Effect: Allow
             Action:
               - sns:Publish
-            Resource: !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${DlqName}
+            Resource: !Sub arn:aws:sns:*:${AWS::AccountId}:${DlqName}
         Version: '2012-10-17'
 
   DeployerRole:
